added video translator.

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,3 +6,7 @@ SPEECH_ENDPOINT=your-speech-endpoint  # e.g., https://eastus.api.cognitive.micro
 TRANSLATOR_API_KEY=your-translator-api-key
 TRANSLATOR_ENDPOINT=your-translator-endpoint  # e.g., https://api.cognitive.microsofttranslator.com/
 TRANSLATOR_REGION=your-translator-region  # e.g., eastus, westus, etc.
+
+# Azure Computer Vision Service
+VISION_API_KEY=your-vision-api-key
+VISION_ENDPOINT=your-vision-endpoint  # e.g., https://eastus.api.cognitive.microsoft.com/
