--- a/server/AI-agent-SpeechTranslator.csproj
+++ b/server/AI-agent-SpeechTranslator.csproj
@@ -25,6 +25,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="OpenCvSharp4" Version="4.9.0.20240423" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.9.0.20240423" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
